<resources>
    <string name="app_name">Nvivahchat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_home">Home</string>
    <string name="app_report">Report</string>
    <string name="app_logout">Logout</string>
    <string name="app_profile">Profile</string>
    <string name="app_lock">App Lock</string>
    <string name="app_upload">Upload</string>
    <string name="app_feed">FeedBack</string>
    <string name="login">Login</string>
    <string name="loginTag">User Login</string>
    <string name="userid">UserID</string>
    <string name="password">Password</string>
    <string name="re_password">Re Enter Password</string>
    <string name="username">User Name</string>
    <string name="usernameId">Your Name</string>
    <string name="mobile">Mobile No</string>
    <string name="register">Sign Up</string>
    <string name="registerTag">Register</string>
    <string name="reg_title">Do not have an Account?\nRegister here.</string>
    <string name="appLock_title">You Can Change App Settings.</string>
    <string name="re_login">Already Registered?\nLogin here.</string>
    <string name="forget">Forgot Password.</string>
    <string name="Qr">Scan QR.</string>
    <string name="app_setting">Setting</string>
    <string name="title_setting">App Settings</string>
    <string name="App_Notify">App Notification</string>
    <string name="push_msg">Notification Message</string>
    <string name="logo">GPS</string>
    <string name="close">Close</string>
    <string name="network">No Internet</string>
    <string name="tryAgain">Check Again</string>
    <string name="sendMsg">Enter Any Message</string>
    <string name="search">Search in List</string>
    <string name="userTitle">User List</string>

    <string name="noInternet">Please Check the internet connection.</string>
    <string name="appName">NamdevVivah</string>

    <string name="SelectDate">Select Dob</string>
</resources>