<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/lavender">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="2dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/logo" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:scaleType="centerInside"
                    android:text="@string/loginTag"
                    android:textAlignment="center"
                    android:textColor="@color/lavender"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck"/>
            </LinearLayout>


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/login" />

            <EditText
                android:id="@+id/userid"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="@string/userid"
                android:drawableStart="@drawable/ic_userid"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/userid"
                android:inputType="textEmailAddress"
                android:scaleType="centerInside" />


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="@string/password"
                android:drawableStart="@android:drawable/ic_secure"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:scaleType="centerInside" />


            <Button
                android:id="@+id/loginApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                app:cornerRadius="50dp"/>

            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/reg_title"
                android:textAlignment="center"
                app:emojiCompatEnabled="false"
                tools:ignore="TextSizeCheck" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminate="false" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnScan"
        android:layout_width="55dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/Qr"
        android:src="@drawable/ic_qr_code_scanner"
        app:maxImageSize="40dp"
        app:tint="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:scaleType="centerInside"
        android:text="@string/appName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck"/>

</LinearLayout>